fix: update overflow property and transition duration in simple-button styles for improved functionality

--- a/apps/web-next/src/components/simple-button/simple-button.module.scss
+++ b/apps/web-next/src/components/simple-button/simple-button.module.scss
@@ -6,13 +6,13 @@
   box-sizing: border-box;
   font-family: "Mojangles";
 
-  overflow: none;
+  overflow: visible;
   display: flex;
   justify-content: center;
   align-items: center;
   width: min-content;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.125s ease;
 
   &:focus-visible {
     outline: none;
@@ -39,7 +39,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding: 0.5rem;
+  padding-inline: calc(g.$padding-xsm * 2.5);
+  @media (max-width: g.$breakpoint-tablet) {
+    padding-inline: calc(g.$padding-xsm * 1.25);
+  }
 }
 
 .active {
